# platform.external.libchrome

./: Android.bp  BASE_VER  BUILD.gn  DIR_METADATA  NOTICE  OWNERS  PRESUBMIT.cfg  README.md  dump_without_crashing.cc  dump_without_crashing.h  platform_thread_backward_compat_hack.cc
base/: base_paths_posix.cc  bind_unittest.cc  build_time.cc  build_time_unittest.cc  cfi_buildflags.h  check.h  clang_profiling_buildflags.h  compiler_specific.h  feature_list_buildflags.h  generated_build_date.h  location.cc  logging.cc  logging_buildflags.h  optional_unittest.cc  parsing_buildflags.h  rand_util_posix.cc  run_loop.h  tracing_buildflags.h
base/allocator/: allocator_shim.cc  allocator_shim.h  allocator_shim_override_cpp_symbols.h  allocator_shim_override_libc_symbols.h  buildflags.h
base/android/: jni_android.cc
base/debug/: debugging_buildflags.h
base/files/: file_posix.cc  file_util_linux.cc  file_util_posix.cc
base/hash/: hash.cc  md5.h
base/json/: json_reader_unittest.cc  json_value_serializer_unittest.cc
base/memory/: memory_pressure_listener.cc  raw_ptr_asan_bound_arg_tracker.h  shared_memory_mapping.cc
base/message_loop/: ios_cronet_buildflags.h  message_pump_for_ui.h
base/metrics/: histogram.cc  statistics_recorder.h
base/process/: memory_linux.cc  process_metrics_unittest.cc
base/profiler/: profiler_buildflags.h
base/strings/: string_number_conversions_unittest.cc
base/synchronization/: synchronization_buildflags.h
base/system/: sys_info_posix.cc
base/task/: current_thread.cc  current_thread.h
base/task/common/: task_annotator.h
base/test/: multiprocess_test.cc  test_pending_task.cc  test_pending_task.h
base/threading/: thread_id_name_manager.cc  thread_local_storage.h
base/time/: time_exploded_posix.cc
base/tracing/protos/: chrome_track_event.pbzero.h
base/types/: optional_unittest.cc
components/timers/: alarm_timer_chromeos.cc
crypto/: apple_keychain.h  auto_cbb.h  crypto_unittests.isolate  ec_private_key.h  ec_signature_creator_impl.h  hmac.cc  hmac.h  hmac_nss.cc  hmac_unittest.cc  nss_crypto_module_delegate.h  nss_key_util.cc  nss_key_util.h  nss_key_util_unittest.cc  nss_util.cc  nss_util.h  nss_util_internal.h  nss_util_unittest.cc  openssl_util.cc  openssl_util.h  p224.cc  p224.h  p224_spake.cc  p224_spake.h  p224_spake_unittest.cc  p224_unittest.cc  random.cc  random.h  random_unittest.cc  rsa_private_key.cc  rsa_private_key.h  rsa_private_key_nss.cc  rsa_private_key_unittest.cc  scoped_capi_types.h  scoped_nss_types.h  scoped_openssl_types.h  scoped_test_nss_chromeos_user.cc  scoped_test_nss_chromeos_user.h  scoped_test_nss_db.cc  scoped_test_nss_db.h  scoped_test_system_nss_key_slot.cc  (+16 more)
libchrome_tools/: apply_patches.py  check_libchrome_test.py  disable_warnings.py  disable_warnings_test.py  files_not_built  gen_perfetto_headers  test_apply_patches.py
libchrome_tools/developer-tools/: change_header.py  generate_metrics.py  test_change_header.py
libchrome_tools/developer-tools/elftools/: crosimage.py  dependency_graph.py  elf.py  usagechecker.py
libchrome_tools/developer-tools/parallel-packages-checker/: config.py  gen_config.py  parallel_packages_checker.py
libchrome_tools/developer-tools/presubmit/: check-libchrome.py  check-patches.py
libchrome_tools/developer-tools/uprev/: automated_uprev.py  automated_uprev_test.py  filter_config.py  filtered_utils.py  filters.py  generate_filtered_tree.py  lazytree.py  merge_main  reconnect_history.py  run_tests.py  test_filters.py  update_upstream.py  utils.py
libchrome_tools/patches/: Add-TerminateBecauseOutOfMemory-back-to-base.patch  Add-libchrome-specific-build-configs.patch  Call-getrandom-from-sys-random.h.patch  Call-getrandom-via-Linux-Syscall-Support.patch  Change-ReadBigEndian-to-take-a-uint8_t-input.patch  Disable-CityHash.patch  Do-not-use-boringssl-in-base-UnguessableToken.patch  Handle-seq_files-with-base-CopyFileContents.patch  Include-base-logging.h-for-webserver-on-mistral.patch  Make-mojo-attributes-from-enums-be-EnumValue.patch  Mojo-Extensible-union-support.patch  Policy-RegistryDict-use-base-Value.patch  Prevent-duplicate-attributes-in-mojo.patch  Remove-DISALLOW-macros.patch  Remove-ICU-dependency-for-base-Time-Explode.patch  Remove-deprecated-GetAsString.patch  Revert-Cast-Mojo-Support-UDS-abstract-namespace-for-NamedPlatformChannel.patch  Revert-Change-MojoHandle-to-64-bits.patch  Revert-Linux-Don-t-access-TLS-in-a-pthread_atfork-ha.patch  Revert-Make-base-VerifyPathControlledByUser-Mac-only.patch  Revert-PA-Remove-dependency-to-base-check.patch  Revert-Reland-Initial-implementation-of-ChromeOS-X86-stack-walker.patch  Revert-StatisticsRecorder-back-to-use-a-base-Lock.patch  Revert-base-allocator-Support-max-alloc-size-with-us.patch  add-libchrome-namespace-to-trace_event-stub-perfetto.patch  add-libchrome-namespace-to-trace_event-stub-perfetto.sh  add-mock-object-manager.patch  add-virtual-dtor-for-base-SharedMemoryMapper.patch  always-include-platform-thread-h.patch  backward-compatibility-0000-add-deprecated-base-Bind-APIs.patch  backward-compatibility-0050-Restore-base-ByteSwapToLE-functions.patch  backward-compatibility-0100-Add-Bind-definitions.patch  backward-compatibility-0100-Add-MakeUnboundRunType-definition.patch  backward-compatibility-0100-Allow-StringPrintf-with-non-constexpr-format-string.patch  backward-compatibility-0100-File-Stat-Lstat-receive-FilePath-const-char-ptr.patch  backward-compatibility-0100-Revert-Code-Health-remove-SupportsWeakPtr.patch  backward-compatibility-0100-Revert-Reland-Move-code-from-base-ByteSwap-to-base-n.patch  backward-compatibility-0100-Revert-Remove-all-references-to-MessagePumpLibevent.patch  backward-compatibility-0100-Revert-Remove-base-Read-Write-BigEndian.patch  backward-compatibility-0100-add-base-AdaptCallbackForRepeating.patch  (+202 more)
libchrome_tools/testdata/: automated_uprev_test_patches  change_header_test.cc
libchrome_tools/testdata/apply_patches/: backward-compatibility-0500-add-foo-to-end-of-file.patch  (+2 more)
mojo/core/: core.cc  handle_table.h  message_pipe_dispatcher.cc  user_message_impl.cc
(+13 files in other folders)
